--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
@@ -28,11 +29,9 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* max-width  */
+@media screen and (min-width: 600px) {
+	.App-header {
+		flex-direction: row;
+	}
 }
