--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=WindSong:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+
 .App {
   text-align: center;
 }
@@ -14,7 +17,6 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -23,15 +25,71 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+
+  /** Background image */
+  background-image: url("./images/background-mobile-sepia.png");
+  background-position: center center;
+  background-repeat:  no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: #999;
 }
+
+.Title {
+  font-size: 30px;
+  font-family: 'Great Vibes';
+}
+
+.btn-grad {background-image: linear-gradient(to right, #c21500 0%, #ffc500  51%, #c21500  100%)}
+.btn-grad {
+   margin: 10px;
+   padding: 15px 45px;
+   font-size: 17px;
+   text-align: center;
+   text-transform: uppercase;
+   transition: 0.5s;
+   background-size: 200% auto;
+   color: white;            
+   box-shadow: 0 0 20px #eee;
+   border-radius: 10px;
+   display: block;
+ }
+
+ .btn-grad:hover {
+   background-position: right center; /* change the direction of the change here */
+   color: #fff;
+   text-decoration: none;
+ }
 
 .App-link {
   color: #61dafb;
 }
 
 /* max-width  */
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 992px) {
 	.App-header {
 		flex-direction: row;
+    background-image: url("./images/background-mobile-sepia.png");
+    background-position: center center;
+    background-repeat:  no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-color: #999;
 	}
+
+  .Title {
+    display: block;
+    position: absolute;
+    left: auto;
+    top: 25px;
+    font-family: 'Great Vibes';
+    font-size: 125px;
+  }
+
+  .btn-grad {
+    display: block;
+    position: absolute;
+    left: auto;
+    top: 675px;
+  }
 }
